[project]
name = "heat-pinn"
version = "2.0.0"
description = "Solve Heat equation with PINNs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib==1.5.3",
    "kaleido==1.2.0",
    "keras==3.14.1",
    "matplotlib==3.9.2",
    "numpy==1.26.4",
    "scipy==1.17.1",
    "pandas==2.2.3",
    "plotly==6.7.0",
    "pyarrow==22.0.0",
    "tensorboard==2.16.2",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.16.2",
    "uv>=0.11.16",
]

[project.scripts]
heat = "cli.heat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

# Configure uv to pull all packages from the Liara mirror
[[tool.uv.index]]
name = "liara-mirror"
url = "https://package-mirror.liara.ir/repository/pypi/simple"
default = true
